<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PreferenciasActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Todolistandroid.NoActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/data_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:baselineAligned="true"
            android:hint="@string/tarefa_data"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text=""
                tools:text="@string/tarefa_data" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:baselineAligned="false"
            android:hint="@string/tarefa_nome"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/data_layout"
            app:layout_constraintStart_toStartOf="@+id/data_layout"
            app:layout_constraintTop_toBottomOf="@+id/data_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descricao_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:baselineAligned="false"
            android:hint="@string/tarefa_descricao"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/nome_layout"
            app:layout_constraintStart_toStartOf="@+id/nome_layout"
            app:layout_constraintTop_toBottomOf="@+id/nome_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descricao"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:lines="4"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/done_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:baselineAligned="false"
            android:hint="@string/usuario_email"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/descricao_layout"
            app:layout_constraintEnd_toEndOf="@+id/descricao_layout"
            app:layout_constraintTop_toBottomOf="@+id/descricao_layout">

            <CheckBox
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/preferencias_done"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/done_layout"
            app:layout_constraintStart_toStartOf="@+id/done_layout"
            app:layout_constraintTop_toBottomOf="@+id/done_layout">

            <Button
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_ok"
                app:icon="@drawable/ic_baseline_check_circle_24"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/button_delete"
                app:icon="@drawable/ic_baseline_delete_24"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>